k8s/v1.37.0/clusters/nuc-k8s/default/virtualServiceKubernetes.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kubernetes-api
  namespace: default
spec:
  hosts: ["kubernetes.maifuj.com"]
  gateways: ["istio-ingress/gateway-tls"]
  tls:
    - match:
        - port: 6443
          sniHosts: ["kubernetes.maifuj.com"]
      route:
        - destination:
            host: kubernetes.default.svc.cluster.local
            port: {number: 443}
